<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <import type="pers.sxqsachin.mtgsearcher.struct.mtg.card.MTGCard"/>
        <import type="android.view.View"/>
        <variable name="card" type="MTGCard"/>
    </data>

    <RelativeLayout
        android:id="@+id/rl_card_detail_1"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <pers.sxqsachin.mtgsearcher.ui.view.URLImageView
            android:id="@+id/iv_card_img"
            android:layout_width="156dp"
            android:layout_height="222dp"

            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.cardName}"
            android:textSize="16sp"
            android:gravity="start"

            android:layout_toEndOf="@id/iv_card_img"
            android:layout_alignTop="@id/iv_card_img"
            android:layout_alignParentEnd="true"

            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_other_part_with_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/other_part_with_colon"
            android:textSize="14sp"
            android:gravity="start"

            android:visibility="@{card.hasOtherPart() ? View.VISIBLE : View.INVISIBLE}"
            android:enabled="@{card.hasOtherPart() ? true : false}"

            android:layout_below="@id/tv_card_name"
            android:layout_alignStart="@id/tv_card_name"

            android:layout_marginTop="2dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_other_part"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.otherPartName}"
            android:textSize="14sp"
            android:gravity="start"
            android:textColor="?attr/colorPrimary"

            android:visibility="@{card.hasOtherPart() ? View.VISIBLE : View.INVISIBLE}"
            android:enabled="@{card.hasOtherPart() ? true : false}"

            android:layout_toEndOf="@id/tv_card_other_part_with_colon"
            android:layout_alignTop="@id/tv_card_other_part_with_colon"
            android:layout_alignBottom="@id/tv_card_other_part_with_colon"
            android:layout_marginEnd="8dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_edition_with_colon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/own_by_with_colon"
            android:textSize="14sp"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"

            android:layout_below="@id/tv_card_other_part_with_colon"
            android:layout_alignStart="@id/tv_card_other_part_with_colon"

            android:layout_marginTop="12dp"
            />
        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_edition"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.currentEditionName}"
            android:textSize="14sp"
            android:gravity="start"

            android:layout_toEndOf="@id/tv_card_edition_with_colon"
            android:layout_alignTop="@id/tv_card_edition_with_colon"
            android:layout_alignBottom="@id/tv_card_edition_with_colon"

            android:layout_marginEnd="8dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_all_editions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/watch_all_editions"
            android:textSize="14sp"
            android:gravity="start"
            android:textColor="?attr/colorPrimary"

            android:visibility="@{card.editions.size() > 1 ? View.VISIBLE : View.INVISIBLE}"
            android:enabled="@{card.editions.size() > 1 ? true : false}"

            android:layout_below="@id/tv_card_edition_with_colon"
            android:layout_alignStart="@id/tv_card_edition_with_colon"

            android:layout_marginTop="2dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_printing"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{@string/index_in_edition_with_colon + card.currentPrintingName}"
            android:textSize="14sp"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"

            android:layout_below="@id/tv_card_all_editions"
            android:layout_alignStart="@id/tv_card_name"
            android:layout_alignEnd="@id/tv_card_name"

            android:layout_marginTop="12dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_all_printings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/watch_all_printings"
            android:textSize="14sp"
            android:gravity="start"
            android:textColor="?attr/colorPrimary"

            android:visibility="@{card.printings.size() > 1 ? View.VISIBLE : View.INVISIBLE}"
            android:enabled="@{card.printings.size() > 1 ? true : false}"

            android:layout_below="@id/tv_card_printing"
            android:layout_alignStart="@id/tv_card_printing"

            android:layout_marginTop="2dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_rarity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{@string/rarity_with_colon + card.cardRarity}"
            android:textSize="14sp"
            android:gravity="start"
            android:maxLines="1"
            android:ellipsize="end"

            android:layout_below="@id/tv_card_all_printings"
            android:layout_alignStart="@id/tv_card_all_printings"

            android:layout_marginTop="12dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_all_languages"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@string/watch_all_languages"
            android:textSize="14sp"
            android:gravity="start"
            android:textColor="?attr/colorPrimary"

            android:visibility="@{card.languages.size() > 1 ? View.VISIBLE : View.INVISIBLE}"
            android:enabled="@{card.languages.size() > 1 ? true : false}"

            android:layout_below="@id/tv_card_rarity"
            android:layout_alignStart="@id/tv_card_rarity"

            android:layout_marginTop="12dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_artist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{@string/card_artist_with_colon + card.artist}"
            android:textSize="14sp"

            android:layout_alignStart="@id/tv_card_all_printings"
            android:layout_alignBottom="@id/iv_card_img"

            android:layout_marginTop="8dp"/>

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_type_cost"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.typeAndCost}"
            android:textSize="15sp"

            android:layout_below="@id/iv_card_img"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"

            android:layout_marginTop="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.description}"
            android:textSize="15sp"
            android:textStyle="bold"
            android:lineSpacingMultiplier="1.25"

            android:layout_below="@id/tv_card_type_cost"
            android:layout_alignStart="@id/tv_card_type_cost"
            android:layout_alignEnd="@id/tv_card_type_cost"

            android:layout_marginTop="8dp"
            />

        <android.support.v7.widget.AppCompatTextView
            android:id="@+id/tv_card_bg_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            android:text="@{card.bgDescription}"
            android:textSize="15sp"
            android:lineSpacingMultiplier="1.25"

            android:layout_below="@id/tv_card_description"
            android:layout_alignStart="@id/tv_card_description"
            android:layout_alignEnd="@id/tv_card_description"

            android:layout_marginTop="8dp"
            />

    </RelativeLayout>

</layout>
